Bug 316748 - "[RTL] [GTK] dropdown arrow is on the wrong side" [p=twanno@lycos.nl (Teune van Steeg) r+sr=roc a1.9=schrep]